--- a/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Layouts/Application.cshtml
+++ b/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/Themes/Basic/Layouts/Application.cshtml
@@ -14,7 +14,7 @@
 @inject IPageLayout PageLayout
 @{
     Layout = null;
-    var containerClass = ViewBag.FluidLayout == true ? "container-fluid" : "container"; //TODO: Better and type-safe options
+    var containerClass =  "container-fluid";
 
     var pageTitle = ViewBag.Title == null ? BrandingProvider.AppName : ViewBag.Title; //TODO: Discard to get from Title
 
@@ -29,6 +29,7 @@
     }
 
     var rtl = CultureHelper.IsRtl ? "rtl" : string.Empty;
+    var version = System.Reflection.Assembly.GetExecutingAssembly().GetName().Version;
 }
 
 <!DOCTYPE html>
@@ -58,20 +59,33 @@
 
     <div class="@containerClass">
         @(await Component.InvokeAsync<PageAlertsViewComponent>())
-        <div id="AbpContentToolbar">
-            <div class="row mb-2">
-                @(await Component.InvokeAsync<ContentTitleViewComponent>())
-                <div class="col">
-                    <div class="text-end">
-                        @await RenderSectionAsync("content_toolbar", false)
-                    </div>
+        <div id="PageHeader">
+            <div class="text-left mb-2">
+                <h4>
+                    @RenderSection("page_header", false)
+                </h4>
+            </div>
+            <div id="AbpContentCentralToolbar" class="text-center ml-2 mr-2">
+                @RenderSection("content_central_toolbar", false)
+            </div>
+            <div id="AbpContentToolbar">
+                <div class="text-right mb-2">
+                    @RenderSection("content_toolbar", false)
                 </div>
             </div>
         </div>
+
         @await Component.InvokeLayoutHookAsync(LayoutHooks.PageContent.First, StandardLayouts.Application)
         @RenderBody()
         @await Component.InvokeLayoutHookAsync(LayoutHooks.PageContent.Last, StandardLayouts.Application)
     </div>
+
+    <footer class="page-footer">
+        <span class="page-footer-block">Version: @version</span>
+        <span class="page-footer-block page-footer-content">
+            @RenderSection("page_footer_content", false)
+        </span>
+    </footer>
 
     <abp-script-bundle name="@BasicThemeBundles.Scripts.Global" />
 
