--- a/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/wwwroot/themes/basic/layout.css
+++ b/Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic/wwwroot/themes/basic/layout.css
@@ -98,3 +98,37 @@ div.dataTables_wrapper div.dataTables_length label {
 .rtl table.dataTable thead th, table.dataTable thead td, table.dataTable tfoot th, table.dataTable tfoot td {
     text-align: right;
 }
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    position: fixed;
+    height: 1.7rem;
+    background-color: white;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
+}
+
+    footer .page-footer-block {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+
+#AbpContentToolbar > div.text-right {
+    display: inline-flex;
+    align-items: center;
+}
+
+    #AbpContentToolbar > div.text-right > * {
+        margin-left: 10px;
+        margin-right: 0;
+    }
+
+#PageHeader {
+    display: flex;
+    justify-content: space-between;
+    align-content: baseline;
+}
