Main functional of categories catalog. Subcategories and goods are not implemented yet

--- a/src/PersonalFinanceAssistant.Web/Pages/Catalogs/GoodsAndCategories/GoodsAndCategories.cshtml
+++ b/src/PersonalFinanceAssistant.Web/Pages/Catalogs/GoodsAndCategories/GoodsAndCategories.cshtml
@@ -11,8 +11,7 @@
 @section scripts {
     <abp-script-bundle name="@PersonalFinanceAssistantBundles.Scripts.TabulatorExtended"></abp-script-bundle>
     <abp-script src="/js/BusyManager.js" />
-    <abp-script src="/Pages/Catalogs/GoodsAndCategories/EditGoodModal.js" />
-    <abp-script src="/Pages/Catalogs/GoodsAndCategories/EditCategoryModal.js" />
+    <abp-script src="/js/CommonEditModal.js" />
     <abp-script src="/Pages/Catalogs/GoodsAndCategories/GoodsAndCategories.js" />
 }
 
